--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //Toasty
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
